# Video-Super-Resolution-Library.Enhanced-BasicVSR

./: .gitmodules  CODEOWNERS  README.md  ReleaseNotes.md  build.sh  build_ivsr.sh  ivsr_setupvar.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecard.yml  scorecards.yml  trivy.yml  ubuntu-build-docker.yml
docs/: docker_image_build.md  generic_manual_build.md  manual_build.md  quick_try_manual_build.md
include/: ivsr.h
ivsr_ffmpeg_plugin/: Dockerfile  README.md  build_docker.sh
ivsr_ffmpeg_plugin/dockerfiles/rockylinux9/: Dockerfile  ov2024.5s.dockerfile
ivsr_ffmpeg_plugin/dockerfiles/ubuntu22/: Dockerfile  ov2024.5.dockerfile  ov2024.5s.dockerfile
ivsr_ffmpeg_plugin/patches/: 0001-Add-iVSR-SDK-build-dependency-and-backend-interfaces.patch  0001-Modify-FFmpeg-configure-file-to-pass-building.patch  0002-Add-iVSR-SDK-as-dnn-processing-backend.patch  0002-Enable-multi-frame-fifo-with-BasicVSR-model.patch  0003-Add-resolution-parameter-and-resolve-flush-frame-beh.patch  0003-Free-ivsr-model-in-deinit-function.patch  0004-Support-OpenVINO-extension-when-BasicVSR-is-utilized.patch  0004-Support-new-model-type-in-dnn_ivsr-backend.patch  0005-Enable-the-support-for-SVP-and-EDSR.patch  0005-Rewise-BasicVSR-image-order-to-RGB24-to-align-the-mo.patch  0006-Enable-model-reshape-without-command-line-input.patch  0006-Update-AV-options-description-if-they-are-not-usable.patch  0007-Support-new-model-in-dnn_ivsr-backend.patch  0008-dnn_backend_ivsr-Fixed-the-bug-which-do-execute_mode.patch  0009-dnn_backend_ivsr-Replaced-if-else-with-switch-for-mo.patch  0010-Solve-the-double-free.patch  0011-Initalize-scale-mean-of-input-output.patch  0012-dnn_backend_ivsr-refine-extension-and-op_xml-paramte.patch  0013-refine-ivsr-plugin-1-incorrect-configure-of-nb_input.patch  0014-ivsr-plugin-remove-useless-input-parameters.patch  0015-1-Update-calling-of-ivsr_prcess-API.-2-add-new-confi.patch  0016-Preview-enable-TSENet-model-in-ivsr-plugin.patch  0017-ivsr_dnn_backend-clamp-output-value-to-limited-range.patch  0018-dnn_backend_ivsr-fix-coverity-issues.patch  0019-dnn_ivsr_backend-optimized-layout-conversion-nchw-nh.patch  0020-dnn_ivsr_backend-process-non-8-aligned-resolution-to.patch  0021-Enable-async-request-infer-and-refine-the-config-set.patch  0022-enable-10bit-for-YUV-and-16bit-for-RGB-support.patch  0023-enable-PrePostProcessing-of-OpenVINO-in-dnn_backend_.patch  0024-refine-RESHAPE_SETTINGS-support-Y-input-SVP-model.patch  0025-dnn_backend_ivsr-change-aligned-size-to-64-from-8.patch  0026-Using-plugin-to-do-model-preprocessing-for-TSENet.patch
ivsr_gpu_opt/: README.md
ivsr_gpu_opt/based_on_openvino_2022.1/: README.md  build.sh
ivsr_gpu_opt/based_on_openvino_2022.1/patches/: 0001-Vsr-opt-dev-2.patch  0002-remove-the-onednn-folder-by-incorrect-submit-4.patch  0003-BasicVSR-inference-sample-code-in-python-5.patch  0004-flow_warp-custom-op-ocl-implementation-and-applicati.patch  0005-Remove-cached-onednn.-8.patch  0006-Enable-BasicVSR-model-conversion-from-pytorch-to-onn.patch  0007-modification-of-custom-op-for-MO-10.patch  0008-Reorder-optimization-9.patch  0009-remove-debug-information-11.patch  0010-Add-license.-12.patch  0011-Add-nif-width-height-arguments-to-pytorch2onnx.py-to.patch  0012-add-refined-cpp-sample-of-BasicVSR-14.patch  0013-clean-useless-files-and-complement-the-introduction-.patch  0014-add-lisense-header-16.patch  0016-Vsr-opt-dev-20.patch  0017-Add-3rd-party-license-and-modify-readme.-21.patch  0018-Bug-Fix-Modified-C-warp-extension-implementation-to-.patch  0019-add-env-requirements-for-python-basicvsr_inference_s.patch
ivsr_gpu_opt/based_on_openvino_2022.3/: README.md
ivsr_ov/based_on_openvino_2022.3/patches/: 0001-Vsr-opt-ov-2022.3.0-23.patch  0002-Vsr-opt-ov22.3-25.patch  0003-Revert-Vsr-opt-ov22.3-25-28.patch  0004-1-update-step-of-mo-pot.-29.patch  0005-apply-patch-from-Renzhi-to-address-memory-issue-26.patch  0006-fix-reorder-insertion-issue-for-int8-model-w-custom-.patch  0007-make-the-patch-more-general-in-prepare_buffer_fusing.patch
ivsr_ov/license/: LICENSE.md
ivsr_sdk/: CMakeLists.txt  README.md  dgpu_umd_stable_555_0124.txt
ivsr_sdk/cmake/: options.cmake
ivsr_sdk/include/: ivsr.h
ivsr_sdk/privates/: CMakeLists.txt
ivsr_sdk/privates/include/: irguard.hpp
ivsr_sdk/privates/model_guard.bin/: CMakeLists.txt  libirguard.a-2022.3.0  libirguard.a-2023.2.0  libirguard.a-2024.4.0
ivsr_sdk/samples/: CMakeLists.txt  vsr_sample.cpp
ivsr_sdk/src/: CMakeLists.txt  ivsr.cpp  ivsr_thread_executor.cpp  ov_engine.cpp  smart_patch.cpp
ivsr_sdk/src/include/: InferTask.hpp  engine.hpp  ivsr_smart_patch.hpp  ov_engine.hpp  utils.hpp
ivsr_sdk/src/include/threading/: ivsr_thread_executor.hpp  ivsr_thread_local.hpp
license/: BSD3_license
src/include/: iivsr.h
